Solved issue with gap between PlayerHeadbar

--- a/src/Player/Player.module.css
+++ b/src/Player/Player.module.css
@@ -19,17 +19,20 @@
 :local .HeaderBar li {
 	cursor: pointer;
 	border-bottom: 1px solid transparent;
+	padding-left: 5px;
+	padding-right: 5px;
 }
 
 :local .HeaderBar li:hover {
 	cursor: pointer;
 	border-bottom: 1px solid red;
 	transition: ease-in-out all 0.3s; 
+	padding-left: 5px;
+	padding-right: 5px;
 }
 
 :local .HeaderBarButtons {
 	display: flex;
-	gap: 10px;
 	flex-direction: row;
 }
 
